--- a/application/build.gradle
+++ b/application/build.gradle
@@ -4,7 +4,7 @@ dependencies {
     compile 'log4j:log4j:1.2.17'
     compile group: 'org.elasticsearch', name: 'elasticsearch', version: '2.3.3'
     compile group: 'org.python', name: 'jython-standalone', version: '2.7.1b3'
-    compile project(':searcher')
+    compile project(':core')
 }
 
 mainClassName = 'br.ufmg.dcc.latin.simulator.UserSimulator'
