--- a/application/build.gradle
+++ b/application/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'application'
 dependencies {
     compile 'log4j:log4j:1.2.17'
     compile group: 'org.elasticsearch', name: 'elasticsearch', version: '2.3.3'
-    compile group: 'org.python', name: 'jython-standalone', version: '2.7.1b3'
+    compile group: 'org.apache.lucene', name: 'lucene-core', version: '5.5.0'
     compile project(':core')
 }
 
