--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,4 +1,6 @@
 dependencies {
     compile group: 'org.elasticsearch', name: 'elasticsearch', version: '2.3.3'
+    compile group: 'org.apache.lucene', name: 'lucene-core', version: '5.5.0'
+      compile group: 'org.json', name: 'json', version: '20160212'
     testCompile 'junit:junit:4.11'
 }
