--- a/application/build.gradle
+++ b/application/build.gradle
@@ -3,7 +3,8 @@ apply plugin: 'application'
 
 
 dependencies {
-    compile 'log4j:log4j:1.2.17'
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.21'
+    compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.21'
     compile group: 'org.elasticsearch', name: 'elasticsearch', version: '2.3.3'
     compile group: 'org.apache.lucene', name: 'lucene-core', version: '5.5.0'
     compile project(':core')
