--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,4 +1,6 @@
 dependencies {
+compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.21'
+compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.21'
     compile group: 'org.elasticsearch', name: 'elasticsearch', version: '2.3.3'
     compile group: 'org.apache.lucene', name: 'lucene-core', version: '5.5.0'
       compile group: 'org.json', name: 'json', version: '20160212'
