--- a/application/src/main/resources/config
+++ b/application/src/main/resources/config
@@ -1,4 +1,4 @@
-INITIAL_RANKING_MODEL DFR
+INITIAL_RANKING_MODEL LMDirichlet
 QUERY_INDEPENDENT_FILENAME /home/felipemoraes/queryIndependentFile.txt
 ES_INDEX_NAME ebola_2015
 ES_INDEX_TYPE doc
