Commit before grpc integration

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,8 +1,18 @@
+
+
+
 dependencies {
-compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.21'
-compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.21'
+    compile 'io.grpc:grpc-netty:0.15.0'
+    compile 'io.grpc:grpc-protobuf:0.15.0'
+    compile 'io.grpc:grpc-stub:0.15.0'
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.21'
+    compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.21'
     compile group: 'org.elasticsearch', name: 'elasticsearch', version: '2.3.4'
     compile group: 'org.apache.lucene', name: 'lucene-core', version: '5.5.0'
-      compile group: 'org.json', name: 'json', version: '20160212'
+    compile group: 'org.json', name: 'json', version: '20160212'
+    compile group: 'edu.stanford.nlp', name: 'stanford-corenlp', version: '3.6.0'
     testCompile 'junit:junit:4.11'
+
 }
+
+
