--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,3 +1,6 @@
 dependencies {
+	    compile group: 'org.apache.lucene', name: 'lucene-core', version: '6.2.1'
+	    compile group: 'org.apache.lucene', name: 'lucene-queryparser', version: '6.2.1'
+	    
     testCompile 'junit:junit:4.11'
 }
