--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,6 +1,7 @@
 dependencies {
 	    compile group: 'org.apache.lucene', name: 'lucene-core', version: '6.2.1'
 	    compile group: 'org.apache.lucene', name: 'lucene-queryparser', version: '6.2.1'
+	     compile group: 'org.elasticsearch', name: 'elasticsearch', version: '2.4.1'
 	    
     testCompile 'junit:junit:4.11'
 }
