--- a/indexing/build.gradle
+++ b/indexing/build.gradle
@@ -2,6 +2,21 @@ apply plugin: 'application'
 
 
 dependencies {
-    compile project(':core')
-
+	compile group: 'commons-io', name: 'commons-io', version: '2.5'	
+	compile group: 'org.apache.tika', name: 'tika-core', version: '1.13'
+	compile group: 'org.apache.tika', name: 'tika-parsers', version: '1.13'
+	compile group: 'org.jwat', name: 'jwat-warc', version: '1.0.4'
+	compile group: 'org.apache.lucene', name: 'lucene-core', version: '6.3.0'
+	compile group: 'org.apache.lucene', name: 'lucene-queryparser', version: '6.3.0'
+	compile group: 'org.apache.lucene', name: 'lucene-analyzers-common', version: '6.3.0'
 }
+
+task indexing(type: JavaExec, dependsOn: classes) {
+    main = 'br.ufmg.dcc.latin.indexing.Indexer'
+    classpath = sourceSets.main.runtimeClasspath
+     if(project.hasProperty('Xargs')){
+       args (Xargs.split());
+    }
+}
+
+mainClassName = ' '
