--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,7 +1,6 @@
 dependencies {
-	    compile group: 'org.apache.lucene', name: 'lucene-core', version: '5.5.2'
-	    compile group: 'org.apache.lucene', name: 'lucene-queryparser', version: '5.5.2'
-	    compile group: 'org.elasticsearch', name: 'elasticsearch', version: '2.4.0'
-	    
-    testCompile 'junit:junit:4.11'
+	    compile group: 'org.apache.lucene', name: 'lucene-core', version: '6.3.0'
+	    compile group: 'org.apache.lucene', name: 'lucene-queryparser', version: '6.3.0'
+	    compile group: 'org.apache.lucene', name: 'lucene-analyzers-common', version: '6.3.0'
+    	testCompile 'junit:junit:4.11'
 }
