--- a/indexing/build.gradle
+++ b/indexing/build.gradle
@@ -9,6 +9,7 @@ dependencies {
 	compile group: 'org.apache.lucene', name: 'lucene-core', version: '6.3.0'
 	compile group: 'org.apache.lucene', name: 'lucene-queryparser', version: '6.3.0'
 	compile group: 'org.apache.lucene', name: 'lucene-analyzers-common', version: '6.3.0'
+	compile project(':core')
 }
 
 task indexing(type: JavaExec, dependsOn: classes) {
