--- a/indexing/build.gradle
+++ b/indexing/build.gradle
@@ -9,6 +9,8 @@ dependencies {
 	compile group: 'com.syncthemall', name: 'boilerpipe', version: '1.2.2'
 	compile group: 'org.apache.solr', name: 'solr-core', version: '6.3.0'
 	compile group: 'commons-codec', name: 'commons-codec', version: '1.9'
+	compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-cbor', version: '2.8.5'
+	compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.5'
 	compile project(':core')
 }
 
