--- a/indexing/build.gradle
+++ b/indexing/build.gradle
@@ -6,7 +6,7 @@ dependencies {
 	compile group: 'org.apache.tika', name: 'tika-core', version: '1.13'
 	compile group: 'org.apache.tika', name: 'tika-parsers', version: '1.13'
 	compile group: 'org.jwat', name: 'jwat-warc', version: '1.0.4'
-	compile group: 'com.syncthemall', name: 'boilerpipe', version: '1.2.2'
+	compile group: 'com.kohlschutter', name: 'boilerpipe-common', version: '2.0'
 	compile group: 'org.apache.solr', name: 'solr-core', version: '6.3.0'
 	compile group: 'commons-codec', name: 'commons-codec', version: '1.9'
 	compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-cbor', version: '2.8.5'
