--- a/indexing/build.gradle
+++ b/indexing/build.gradle
@@ -14,6 +14,8 @@ dependencies {
 	compile group: 'commons-codec', name: 'commons-codec', version: '1.9'
 	compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-cbor', version: '2.8.5'
 	compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.5'
+	compile group: 'rome', name: 'rome', version: '1.0'
+	
 	compile project(':core')
 }
 
