Change gradle script

--- a/indexing/build.gradle
+++ b/indexing/build.gradle
@@ -21,7 +21,7 @@ task indexing(type: JavaExec, dependsOn: classes) {
 }
 
 task optimizing(type: JavaExec, dependsOn: classes) {
-    main = 'br.ufmg.dcc.latin.indexing.Indexer'
+    main = 'br.ufmg.dcc.latin.indexing.Optimizer'
     classpath = sourceSets.main.runtimeClasspath
      if(project.hasProperty('Xargs')){
        args (Xargs.split());
