--- a/indexing/build.gradle
+++ b/indexing/build.gradle
@@ -28,4 +28,13 @@ task optimizing(type: JavaExec, dependsOn: classes) {
     }
 }
 
+task clueweb(type: JavaExec, dependsOn: classes) {
+    main = 'br.ufmg.dcc.latin.indexing.CluewebIndexing'
+    classpath = sourceSets.main.runtimeClasspath
+     if(project.hasProperty('Xargs')){
+       args (Xargs.split());
+    }
+}
+
+
 mainClassName = ' '
