--- a/indexing/build.gradle
+++ b/indexing/build.gradle
@@ -30,6 +30,7 @@ task optimizing(type: JavaExec, dependsOn: classes) {
 
 task clueweb(type: JavaExec, dependsOn: classes) {
     main = 'br.ufmg.dcc.latin.indexing.CluewebIndexing'
+    maxHeapSize = "32g"
     classpath = sourceSets.main.runtimeClasspath
      if(project.hasProperty('Xargs')){
        args (Xargs.split());
