--- a/core/build.gradle
+++ b/core/build.gradle
@@ -2,5 +2,6 @@ dependencies {
 	    compile group: 'org.apache.lucene', name: 'lucene-core', version: '6.3.0'
 	    compile group: 'org.apache.lucene', name: 'lucene-queryparser', version: '6.3.0'
 	    compile group: 'org.apache.lucene', name: 'lucene-analyzers-common', version: '6.3.0'
+	    compile group: 'net.sf.trove4j', name: 'trove4j', version: '3.0.3'
     	testCompile 'junit:junit:4.11'
 }
