Improve SimAP performance and fixed some bugs

--- a/experiments/build.gradle
+++ b/experiments/build.gradle
@@ -23,4 +23,12 @@ task SimulatedDiversity(type: JavaExec, dependsOn: classes) {
     }
 }
 
+task SimulatedNoisedDiversity(type: JavaExec, dependsOn: classes) {
+    main = 'br.ufmg.dcc.latin.experiment.SimulatedNoisedDiversity'
+    classpath = sourceSets.main.runtimeClasspath
+     if(project.hasProperty('Xargs')){
+       args (Xargs.split());
+    }
+}
+
 mainClassName = ' '
