Created experiments with dynamic noised diversity

--- a/experiments/build.gradle
+++ b/experiments/build.gradle
@@ -40,4 +40,12 @@ task SimulatedNoisedDiversity(type: JavaExec, dependsOn: classes) {
     }
 }
 
+task SimulatedDynamicNoisedDiversity(type: JavaExec, dependsOn: classes) {
+    main = 'br.ufmg.dcc.latin.experiment.SimulatedDynamicNoisedDiversity'
+    classpath = sourceSets.main.runtimeClasspath
+     if(project.hasProperty('Xargs')){
+       args (Xargs.split());
+    }
+}
+
 mainClassName = ' '
