--- a/core/build.gradle
+++ b/core/build.gradle
@@ -3,5 +3,6 @@ dependencies {
 	    compile group: 'org.apache.lucene', name: 'lucene-queryparser', version: '6.3.0'
 	    compile group: 'org.apache.lucene', name: 'lucene-analyzers-common', version: '6.3.0'
 	    compile group: 'net.sf.trove4j', name: 'trove4j', version: '3.0.3'
+	    compile group: 'org.apache.commons', name: 'commons-math3', version: '3.6'
     	testCompile 'junit:junit:4.11'
 }
