Effectiveness analysis experiment

--- a/experiments/build.gradle
+++ b/experiments/build.gradle
@@ -15,6 +15,13 @@ task CoverageAnalysis(type: JavaExec, dependsOn: classes) {
     }
 }
 
+task EffectivenessAnalysis(type: JavaExec, dependsOn: classes) {
+    main = 'br.ufmg.dcc.latin.experiments.CoverageAnalysis'
+    classpath = sourceSets.main.runtimeClasspath
+     if(project.hasProperty('Xargs')){
+       args (Xargs.split());
+    }
+}
 
 
 mainClassName = ' '
