--- a/indexing/build.gradle
+++ b/indexing/build.gradle
@@ -29,6 +29,14 @@ task QueryIndependentFeatures(type: JavaExec, dependsOn: classes) {
     }
 }
 
+task ComputeLengths(type: JavaExec, dependsOn: classes) {
+    main = 'br.ufmg.dcc.latin.indexing.ComputeLengths'
+    classpath = sourceSets.main.runtimeClasspath
+     if(project.hasProperty('Xargs')){
+       args (Xargs.split());
+    }
+}
+
 task optimizing(type: JavaExec, dependsOn: classes) {
     main = 'br.ufmg.dcc.latin.indexing.Optimizer'
     classpath = sourceSets.main.runtimeClasspath
